--- a/server/config/services.yaml
+++ b/server/config/services.yaml
@@ -15,6 +15,14 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+        exclude: 
+            - '../src/Kernel.php'
+            - '../src/Infrastructure/ForTests/Services/**/*'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Application\Ports\Services\IAuthenticatedUserProvider: '@App\Infrastructure\ForProduction\Services\WebAuthenticatedUserProvider'
+    App\Application\Ports\Services\IIdProvider: '@App\Infrastructure\ForProduction\Services\RandomIdProvider'
+    App\Application\Ports\Repositories\ICustomerRepository: '@App\Infrastructure\ForProduction\Repository\SqlCustomerRepository'
+    App\Application\Ports\Repositories\ICustomerOrderRepository: '@App\Infrastructure\ForProduction\Repository\SqlCustomerOrderRepository'
+    App\Application\Ports\Repositories\IDepositRepository: '@App\Infrastructure\ForProduction\Repository\SqlDepositRepository'
+
+
