--- a/server/config/services.yaml
+++ b/server/config/services.yaml
@@ -21,10 +21,12 @@ services:
 
     App\Application\Ports\Services\IAuthenticatedUserProvider: '@App\Infrastructure\ForProduction\Services\WebAuthenticatedUserProvider'
     App\Application\Ports\Services\IIdProvider: '@App\Infrastructure\ForProduction\Services\RandomIdProvider'
+    App\Domain\Service\IPricingProvider: '@App\Infrastructure\ForProduction\Services\FixedPricingProvider'
     App\Application\Ports\Repositories\ICustomerRepository: '@App\Infrastructure\ForProduction\Repository\SqlCustomerRepository'
     App\Application\Ports\Repositories\ICustomerOrderRepository: '@App\Infrastructure\ForProduction\Repository\SqlCustomerOrderRepository'
     App\Application\Ports\Repositories\IDepositRepository: '@App\Infrastructure\ForProduction\Repository\SqlDepositRepository'
     App\Application\Ports\Repositories\IUserRepository: '@App\Infrastructure\ForProduction\Repository\SqlUserRepository'
+    App\Application\Ports\Repositories\IOrderPaymentRepository: '@App\Infrastructure\ForProduction\Repository\SqlOrderPaymentRepository'
 
     App\Application\Listeners\ExceptionListener:
         tags: [ kernel.event_listener ]
